9 Aug 2011: Wouter
	- daemon code.

8 Aug 2011: Wouter
	- import of mismash of files from Unbound (BSD licensed).