@@ -1,3 +1,6 @@
+10 Aug 2011: Wouter
+	- working osx script, netconfig script and networkmanager script.
+
 9 Aug 2011: Wouter
 	- daemon code.
 
